--- a/src/host/component/content1/styles.module.scss
+++ b/src/host/component/content1/styles.module.scss
@@ -3,8 +3,13 @@
 }
 
 @keyframes fade-in {
-    from { opacity: 0}
-    to { opacity: 1 }
+    from {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 .app {
@@ -44,6 +49,8 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                box-shadow: rgba(17, 17, 26, 0.25) 0px 10px 40px;
+                // box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 
                 .picture {
                     padding-top: 100%;
@@ -51,6 +58,7 @@
                     background-size: cover;
                     background-repeat: no-repeat;
                     width: 100%;
+                    cursor: pointer;
                 }
             }
 
@@ -79,6 +87,7 @@
                     }
                 }
             }
+
             .textContainer.animated {
                 animation: fade-in .2s linear;
             }
@@ -132,6 +141,7 @@
 
 @media (max-width: 949px) {
     .app {
+        padding: 110px 0 50px 48px;
 
         .header {
 
@@ -187,26 +197,36 @@
 
 @media (max-width: 743px) {
     .app {
+        padding: 24px 0 0 24px;
 
         .header {
+            margin-bottom: 32px;
 
-            .headerText {}
+            .headerText {
+                font-weight: 500;
+                text-align: left;
+                font-size: 32px;
+                letter-spacing: -2px;
+            }
         }
-
+        
         .container {
-
+            
             .content {
                 flex: 1 0 80%;
                 padding-right: 18px;
-
+                
                 .image {
-
+                    
                     .picture {}
                 }
-
+                
                 .textContainer {
-
-                    .description {}
+                    
+                    .description {
+                        font-size: 18px;
+                        line-height: normal;
+                    }
 
                     .footer {
 
@@ -227,7 +247,7 @@
         }
 
         .button {
-            left: 85%;
+            left: 70%;
 
             .next,
             .prev {}
