--- a/src/Content/Body/placeBody/style.module.scss
+++ b/src/Content/Body/placeBody/style.module.scss
@@ -30,7 +30,7 @@
         border: 1px solid #d8d8d8;
         background-color: #fff;
         padding: 8px;
-        display: flex;
+        display: none;
         align-items: center;
         justify-content: center;
         border-radius: 50%;
@@ -76,7 +76,15 @@
 }
 
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
+    .app {
+
+        .nextBtn,
+        .prevBtn {
+            display: flex;
+        }
+    }
+
     .itemContainers {
         flex-wrap: nowrap;
         scroll-behavior: smooth;
