--- a/src/host/component/content2/extraComponent/styles.module.scss
+++ b/src/host/component/content2/extraComponent/styles.module.scss
@@ -22,7 +22,7 @@
     }
 }
 
-.container {
+.app {
     position: fixed;
     height: 100vh;
     top: 0;
@@ -40,59 +40,111 @@
         background-color: rgb(44, 44, 44);
     }
 
-    .content {
-        background-color: #fff;
-        padding-top: 16px;
+    .container {
+        padding: 0 40px;
         position: absolute;
         top: 45%;
         left: 50%;
-        transform: translate(-50%, -50%);
-        color: #000;
-        max-width: 80%;
         width: 100%;
-        border-radius: 16px;
-        animation: slide-up ease-in-out .5s forwards; 
+        animation: slide-up ease-in-out .5s forwards;
 
-        .icon {
-            font-size: 24px;
-            cursor: pointer;
-            display: inline-flex;
-            padding: 4px;
-            margin-left: 24px;
-            align-items: center;
-            border-radius: 100%;
-        }
-        .icon:hover {
-            background-color: #f7f7f7;
-        }
+        .content {
+            border-radius: 16px;
+            background-color: #fff;
+            padding-top: 16px;
+            color: #000;
+            max-width: 780px;
+            margin: auto;
 
-        .body {
-            padding: 24px 40px 48px 40px;
-            overflow: hidden;
-            overflow: scroll;
-
-            .title {
-                font-size: 32px;
-            }
-    
-            .text {
-                margin-top: 16px;
-            }
-    
-            .list {
-                margin: 16px 0;
-                padding-left: 40px;
-            }
-    
-            .emphasize {
-                font-weight: 600;
-                text-decoration: underline;
+            .icon {
+                font-size: 24px;
                 cursor: pointer;
+                display: inline-flex;
+                padding: 4px;
+                margin-left: 24px;
+                align-items: center;
+                border-radius: 100%;
+            }
+
+            .icon:hover {
+                background-color: #f7f7f7;
+            }
+
+            .body {
+                padding: 24px 40px 48px 40px;
+                overflow: scroll;
+
+                .title {
+                    font-size: 32px;
+                }
+
+                .text {
+                    margin-top: 16px;
+                }
+
+                .list {
+                    margin: 16px 0;
+                    padding-left: 40px;
+                }
+
+                .emphasize {
+                    font-weight: 600;
+                    text-decoration: underline;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 744px) {
+    @keyframes slide-up {
+        from {
+            transform: translate(0, 140%);
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+            transform: translate(0, 0);
+        }
+    }
+
+    @keyframes slide-down {
+        from {
+            opacity: 1;
+            transform: translate(-50%, -50%);
+        }
+
+        to {
+            transform: translate(-50%, 140%);
+            opacity: 0;
+        }
+    }
+
+    .app {
+
+        .container {
+            padding: 0;
+            top: auto;
+            left: auto;
+            bottom: 0;
+            max-height: 90%;
+            overflow: scroll;
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
+
+            .content {
+                border-radius: unset;
+
+                .body {
+                    overflow: unset;
+                }
             }
         }
     }
 }
 
 .hide {
-    display: none!important;
+    display: none !important;
 }
