--- a/src/host/component/content2/styles.module.scss
+++ b/src/host/component/content2/styles.module.scss
@@ -1,6 +1,26 @@
+@keyframes rotate {
+    from {
+        transform: rotate(0deg)
+    }
+
+    to {
+        transform: rotate(180deg)
+    }
+}
+
+@keyframes rotate-reverse {
+    from {
+        transform: rotate(180deg)
+    }
+
+    to {
+        transform: rotate(0deg)
+    }
+}
+
 .app {
-    padding-top: 80px !important;
-    min-height: 760px !important;
+    padding-top: 80px;
+    min-height: 760px;
     margin-bottom: 164px;
 
     .container {
@@ -37,52 +57,6 @@
                         animation: rotate-reverse .2s linear;
                     }
                 }
-
-                .list {
-                    position: absolute;
-                    top: 100%;
-                    left: 50%;
-                    transform: translateX(-50%) scale(1.5);
-                    transform-origin: top;
-                    z-index: 3;
-                    max-height: 400px;
-                    overflow-y: scroll;
-                    background-color: #fff;
-                    border: 1px solid #000;
-                    display: none;
-
-                    .item {
-                        padding: 18px 36px 18px 18px;
-                        cursor: pointer;
-                        text-align: left;
-                        position: relative;
-                    }
-
-                    .item:hover {
-                        background-color: rgb(34, 34, 34);
-                        color: rgb(255, 255, 255);
-                    }
-
-                    .actived.item {
-                        transition: color 0.02s ease 0s, background-color 0.02s ease 0s;
-                        border-bottom: 1px solid rgb(221, 221, 221);
-                        background-color: rgb(34, 34, 34);
-                        color: rgb(255, 255, 255);
-                    }
-
-                    .itemIcon {
-                        position: absolute;
-                        right: 0;
-                        top: 50%;
-                        display: inline-flex;
-                        visibility:hidden;
-                        transform: translate(-70%, -50%);
-                    }
-
-                    .actived.item > .itemIcon {
-                        visibility: visible;
-                    }
-                }
             }
 
             .total {
@@ -100,87 +74,92 @@
     }
 }
 
+@media (min-width: 744px) {
+    .list {
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translateX(-50%) scale(1.5);
+        transform-origin: top;
+        z-index: 3;
+        max-height: 400px;
+        overflow-y: scroll;
+        background-color: #fff;
+        border: 1px solid #000;
+        display: none;
+
+        .listHeaderPhoneOnly {
+            display: none;
+        }
+
+        .item {
+            padding: 18px 36px 18px 18px;
+            cursor: pointer;
+            text-align: left;
+            position: relative;
+        }
+
+        .item:hover {
+            background-color: rgb(34, 34, 34);
+            color: rgb(255, 255, 255);
+        }
+
+        .actived.item {
+            transition: color 0.02s ease 0s, background-color 0.02s ease 0s;
+            border-bottom: 1px solid rgb(221, 221, 221);
+            background-color: rgb(34, 34, 34);
+            color: rgb(255, 255, 255);
+        }
+
+        .itemIcon {
+            position: absolute;
+            right: 0;
+            top: 50%;
+            display: inline-flex;
+            visibility: hidden;
+            transform: translate(-70%, -50%);
+        }
+
+        .actived.item>.itemIcon {
+            visibility: visible;
+        }
+    }
+}
+
 @media (max-width: 743px) {
     .app {
-        padding-top: 80px !important;
-        min-height: 416px !important;
-        margin-bottom: 164px;
-    
+        min-height: 416px;
+
         .container {
-            padding-left: 48px;
-    
+            padding-left: 24px;
+            padding-right: 24px;
+
             .content {
                 text-align: left;
-    
+
                 .title {
                     font-size: 24px;
                     font-weight: 400;
                 }
-    
+
                 .box {
                     margin-bottom: 32px;
-    
+
                     .button {
                         font-size: 24px;
                         margin-top: 4px;
-    
+
                         .btnIcon {
                             font-size: 16px;
                         }
                     }
-    
-                    .list {
-                        position: absolute;
-                        top: 100%;
-                        left: 50%;
-                        transform: translateX(-50%) scale(1.5);
-                        transform-origin: top;
-                        z-index: 3;
-                        max-height: 400px;
-                        overflow-y: scroll;
-                        background-color: #fff;
-                        border: 1px solid #000;
-                        display: none;
-    
-                        .item {
-                            padding: 18px 36px 18px 18px;
-                            cursor: pointer;
-                            text-align: left;
-                            position: relative;
-                        }
-    
-                        .item:hover {
-                            background-color: rgb(34, 34, 34);
-                            color: rgb(255, 255, 255);
-                        }
-    
-                        .actived.item {
-                            transition: color 0.02s ease 0s, background-color 0.02s ease 0s;
-                            border-bottom: 1px solid rgb(221, 221, 221);
-                            background-color: rgb(34, 34, 34);
-                            color: rgb(255, 255, 255);
-                        }
-    
-                        .itemIcon {
-                            position: absolute;
-                            right: 0;
-                            top: 50%;
-                            display: inline-flex;
-                            visibility:hidden;
-                            transform: translate(-70%, -50%);
-                        }
-    
-                        .actived.item > .itemIcon {
-                            visibility: visible;
-                        }
-                    }
                 }
-    
+
                 .total {
                     font-size: 40px;
                     font-weight: bold;
                 }
-    
+
                 .footer {
                     text-decoration: underline;
                     font-weight: 600;
@@ -193,18 +172,9 @@
 }
 
 .displayBlock {
-    display: block !important;
+    display: block;
 }
 
-
-@keyframes rotate {
-    from { transform: rotate(0deg) }
-    to { transform: rotate(180deg) }
-}
-@keyframes rotate-reverse {
-    from { transform: rotate(180deg) }
-    to { transform: rotate(0deg) }
-}
 .rotate {
     animation: rotate .2s linear forwards !important;
 }
